[gd_scene load_steps=25 format=3 uid="uid://b3d5v3f3xxmyr"]

[ext_resource type="PackedScene" uid="uid://by7yctgrl7bo1" path="res://player.tscn" id="1_f3sb7"]
[ext_resource type="Script" uid="uid://cye0siraoeqot" path="res://world.gd" id="1_fj7yv"]
[ext_resource type="Texture2D" uid="uid://cvnjo146ljtu0" path="res://Solid_white.png" id="3_tlwt5"]
[ext_resource type="PackedScene" uid="uid://hvvkl7lvsd4v" path="res://terminal.tscn" id="4_aqk2v"]
[ext_resource type="PackedScene" uid="uid://pysmgpld30kt" path="res://tool.tscn" id="5_036b0"]
[ext_resource type="Script" uid="uid://ce5030nntfbll" path="res://UIManager.gd" id="6_2o6r5"]
[ext_resource type="Script" uid="uid://bxy6c1qx4dxeq" path="res://quiz_ui.gd" id="6_dwbse"]
[ext_resource type="Script" uid="uid://1gpblsr3h3ch" path="res://terminal_text.gd" id="6_k3n1d"]
[ext_resource type="PackedScene" uid="uid://dx5vuu1noee2i" path="res://quizmaster.tscn" id="7_pkg7o"]
[ext_resource type="PackedScene" uid="uid://oc4d7qawurv6" path="res://terminal_ui.tscn" id="8_gbfbk"]
[ext_resource type="PackedScene" uid="uid://cfyuw72hl38nd" path="res://shooter.tscn" id="9_ioo17"]
[ext_resource type="PackedScene" uid="uid://blk42hgh3rpoo" path="res://projectile.tscn" id="10_wse8f"]
[ext_resource type="PackedScene" uid="uid://cb870han1j5p4" path="res://checkpoint.tscn" id="11_ic0uy"]
[ext_resource type="PackedScene" uid="uid://drylj2ljl71ai" path="res://hostile.tscn" id="14_70uel"]
[ext_resource type="PackedScene" uid="uid://c23usrwuof0ju" path="res://hud.tscn" id="15_hiqwa"]
[ext_resource type="PackedScene" uid="uid://b2i7uqwr0bvu7" path="res://death_popup.tscn" id="16_2u3nc"]
[ext_resource type="PackedScene" uid="uid://cw1d7jjf6gjfu" path="res://tutorial_popup.tscn" id="17_cbp6q"]
[ext_resource type="PackedScene" uid="uid://djitq0uk1qq1g" path="res://dialogue_system.tscn" id="17_udxuc"]
[ext_resource type="PackedScene" uid="uid://icgnrds7ntj4" path="res://level_complete_popup.tscn" id="18_26xuy"]
[ext_resource type="PackedScene" uid="uid://btwlgc8kffhjh" path="res://level1.tscn" id="19_cbp6q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fj7yv"]
size = Vector2(1280, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tlwt5"]
size = Vector2(1280, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aqk2v"]
size = Vector2(20, 720)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_036b0"]
size = Vector2(20, 720)

[node name="World" type="Node2D"]
script = ExtResource("1_fj7yv")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(640, 359.5)
scale = Vector2(6.4, 3.595)
texture = ExtResource("3_tlwt5")

[node name="Player" parent="." groups=["player"] instance=ExtResource("1_f3sb7")]
modulate = Color(0.822726, 0.792002, 0.699268, 1)
z_index = 1
position = Vector2(153, -109)

[node name="QuizUI" type="CanvasLayer" parent="."]
script = ExtResource("6_dwbse")

[node name="Panel" type="Panel" parent="QuizUI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -100.0
offset_right = 102.0
offset_bottom = -77.0
grow_horizontal = 2
grow_vertical = 2
text = "What does RAM stand for?"

[node name="VBoxContainer" type="VBoxContainer" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 16.0
offset_right = 20.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2

[node name="True" type="Button" parent="QuizUI/Panel/VBoxContainer"]
layout_mode = 2

[node name="False" type="Button" parent="QuizUI/Panel/VBoxContainer"]
layout_mode = 2

[node name="FeedbackLabel" type="Label" parent="QuizUI/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Room" type="Node2D" parent="."]

[node name="Wall Top" type="StaticBody2D" parent="Room"]
position = Vector2(640, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room/Wall Top"]
shape = SubResource("RectangleShape2D_fj7yv")

[node name="WallBottom" type="StaticBody2D" parent="Room"]
position = Vector2(640, 984)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room/WallBottom"]
position = Vector2(-6, -7)
shape = SubResource("RectangleShape2D_tlwt5")

[node name="WallLeft" type="StaticBody2D" parent="Room"]
position = Vector2(0, 360)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room/WallLeft"]
shape = SubResource("RectangleShape2D_aqk2v")

[node name="WallRight" type="StaticBody2D" parent="Room"]
position = Vector2(1584, 360)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room/WallRight"]
position = Vector2(-319, -6)
shape = SubResource("RectangleShape2D_036b0")

[node name="Terminal" parent="." instance=ExtResource("4_aqk2v")]
position = Vector2(980, 203)
scale = Vector2(0.3, 0.3)

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("6_2o6r5")

[node name="TerminalText" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -42.0
offset_right = 222.0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0.501961, 0, 1)
theme_override_font_sizes/font_size = 30
script = ExtResource("6_k3n1d")

[node name="Tool" parent="." instance=ExtResource("5_036b0")]
z_index = 1
position = Vector2(2085, 823)
scale = Vector2(0.3, 0.3)

[node name="Quizmaster" parent="." instance=ExtResource("7_pkg7o")]
z_index = 1
position = Vector2(2747, -482)

[node name="TerminalUI" parent="." instance=ExtResource("8_gbfbk")]

[node name="Shooter" parent="." instance=ExtResource("9_ioo17")]
position = Vector2(745, -774)
scale = Vector2(0.5, 0.5)
projectile_scene = ExtResource("10_wse8f")
fire_interval = 1.0

[node name="PlayerStart" type="Marker2D" parent="."]
position = Vector2(2214, -473)

[node name="Checkpoint" parent="." instance=ExtResource("11_ic0uy")]
position = Vector2(507, 250)

[node name="Checkpoint2" parent="." instance=ExtResource("11_ic0uy")]
position = Vector2(1083, 335)
scale = Vector2(1.00289, 0.98433)

[node name="hostile" parent="." instance=ExtResource("14_70uel")]
z_index = 1
position = Vector2(2751, 213)
scale = Vector2(3, 3)
spawn_marker_path = NodePath("../Hostile1Spawn")

[node name="Hostile1Spawn" type="Marker2D" parent="."]
position = Vector2(2751, 213)

[node name="hostile3" parent="." instance=ExtResource("14_70uel")]
z_index = 1
position = Vector2(2668, 113)
scale = Vector2(3, 3)
spawn_marker_path = NodePath("../Hostile1Spawn3")

[node name="Hostile1Spawn3" type="Marker2D" parent="."]
position = Vector2(2668, 113)

[node name="hostile4" parent="." instance=ExtResource("14_70uel")]
z_index = 1
position = Vector2(2810, 99)
scale = Vector2(3, 3)
spawn_marker_path = NodePath("../Hostile1Spawn4")

[node name="Hostile1Spawn4" type="Marker2D" parent="."]
position = Vector2(2810, 99)

[node name="hostile2" parent="." instance=ExtResource("14_70uel")]
position = Vector2(435, 774)
spawn_marker_path = NodePath("../Hostile1Spawn2")

[node name="Hostile1Spawn2" type="Marker2D" parent="."]
position = Vector2(435, 774)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("15_hiqwa")]

[node name="DeathPopup" parent="CanvasLayer" instance=ExtResource("16_2u3nc")]
visible = false

[node name="TutorialPopup" parent="CanvasLayer" instance=ExtResource("17_cbp6q")]

[node name="LevelCompletePopup" parent="CanvasLayer" instance=ExtResource("18_26xuy")]

[node name="DialogueSystem" parent="." instance=ExtResource("17_udxuc")]

[node name="DemoLevel2" parent="." instance=ExtResource("19_cbp6q")]
position = Vector2(338, 17)
